css/style.css
:root {
  --main-bg: #262426;
  --main-fg: #fff2ff;
}

body {
  margin: 0;
  background-color: var(--main-bg);
  color: var(--main-fg);
}

div#wrapper {
  min-height: 100vh;

  display: grid;

  header {
    grid-area: hd;
    background-color: salmon;

    display: flex;
  }

  button {
    padding: 0;
    color: var(--main-fg);
  }

  div.nav-wrapper {
    position: relative;

    --transition-time: 0.3s;
    --transition-kind: ease;

    nav.togglable {

      width: 100%;
      max-width: 80vw;
      overflow: hidden;
      visibility: hidden;
      grid-area: nv;
      background-color: blueviolet;

      transform: translateX(-100%);
    }

    nav.togglable.with-transitions {
      transition: transform var(--transition-time) var(--transition-kind), visibility var(--transition-time) var(--transition-kind);
    }

    nav.togglable.show {
      transform: translateX(0);
      visibility: visible;
    }

    button.nav-button.side-button {
      --button-width: 28px;
      --button-height: 31px;

      position: absolute;
      top: calc(50% - calc(var(--button-height) / 2));
      /* top: calc(100% - var(--button-height)); */
      transition: right var(--transition-time) var(--transition-kind);

      right: calc(100% - var(--button-width));
    }

    button.nav-button.side-button.is-left {
      transform: scaleX(-1);
      right: 0;
      /* right: calc(100% - var(--button-width)); */
    }
  }

  main {
    grid-area: mn;
    background-color: pink;
  }

  aside {
    grid-area: as;
    display: none;
    background-color: greenyellow;
  }

  footer {
    grid-area: ft;
    background-color: aquamarine;
  }
}

@media screen and (max-width: 999px) {
  div#wrapper {
    grid-template-rows: auto 1fr auto;
    grid-template-columns: 1fr;

    grid-template-areas: "hd"
      "mn"
      "ft";

    nav.togglable {
      height: 100vh;
      position: absolute;
      left: 0;
    }

    button.nav-button.side-button {
      display: none;
    }
  }
}

@media screen and (min-width: 1000px) {
  div#wrapper {
    grid-template-columns: minmax(17em, 1fr) minmax(0, 120ch) minmax(17em, 1fr);
    grid-template-rows: auto 1fr auto;

    button.nav-button.header-button {
      display: none;
    }

    nav.togglable {
      height: 100%;
    }

    grid-template-areas: "hd hd hd"
    "nv mn as"
    "ft ft ft";

    aside {
      display: block;
    }
  }
}

